Radio buttons disabling, click-to-focus picture box

--- a/src/components/Pictures/PicturesCarousel.css
+++ b/src/components/Pictures/PicturesCarousel.css
@@ -1,17 +1,12 @@
 .picture {
   margin: 15px;
+  border-radius: 10px;
 }
 
 .main {
   height: 300px;
-  width: 600px;
 }
 
 .secondary {
   height: 100px;
-  width: 200px;
-}
-
-.secondary:hover {
-  transform: scale(1.1);
 }
