--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
+body {
+  background-color: rgb(203, 220, 250);
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .pictureSet {
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
   align-items: center;
 }
