--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 body {
+  margin: 0;
   background-color: rgb(203, 220, 250);
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
