--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,18 +1,33 @@
 nav {
-  width: 100%;
+  display: flex;
   background-color: rgb(20, 20, 141);
-  text-align: center;
-  color: white;
-  position: absolute;
-  top: 0px;
+  color: rgb(203, 220, 250);
+  justify-content: space-around;
 }
 
 ul {
   list-style: none;
+  padding: 0;
 }
 
 li {
   display: inline;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.active {
+  background-color: rgb(203, 220, 250);
+  color: black;
+  font-weight: bolder;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  padding: 16px;
+}
+
+a:hover {
+  text-decoration: underline;
 }
