--- a/src/pages/Rovers.css
+++ b/src/pages/Rovers.css
@@ -1,6 +1,6 @@
 .roverDetails {
   display: grid;
-  grid-template-columns: 600px 600px;
+  grid-template-columns: auto auto;
   grid-column-gap: 10px;
   margin-top: 40px;
   margin-bottom: 40px;
@@ -13,6 +13,27 @@
   margin-bottom: 2px;
 }
 
+.roverInformation {
+  display: grid;
+  grid-template-columns: auto 600px;
+  grid-template-areas:
+    "picture details"
+    "picture story";
+}
+
 .roverImg {
-  margin-top: 40px;
+  grid-area: picture;
+  margin: 20px;
+}
+
+.roverDetails {
+  grid-area: details;
+}
+
+.roverStory {
+  grid-area: story;
+}
+
+.roverStory > h2:first-child {
+  margin-top: 0px;
 }
