--- a/src/components/SearchParameters/SearchParameters.css
+++ b/src/components/SearchParameters/SearchParameters.css
@@ -5,17 +5,10 @@
   width: 1200px;
   padding: 5px 20px 10px;
   display: flex;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
-#submitButtonDiv {
-  display: block;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.searchOptions > form > div {
-  display: inline-block;
-  margin-left: 30px;
-  margin-right: 30px;
+.submitButtonDiv {
+  align-self: center;
 }
