--- a/src/components/Pictures/PicturesBox.css
+++ b/src/components/Pictures/PicturesBox.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;
+  padding: 20px;
 }
 
 .pictureBoxImages > img {
@@ -17,8 +18,21 @@
   border-radius: 20px;
 }
 
-.pictureBox > p {
+.pictureBoxLabel {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.pictureBox p {
   text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.pictureBox > p {
+  margin-bottom: 0;
 }
 
 .pictureBox h2 {
