Improved the style by adding some responsiveness

--- a/src/components/Pictures/PicturesBox.css
+++ b/src/components/Pictures/PicturesBox.css
@@ -12,7 +12,7 @@
 }
 
 .pictureBox {
-  width: 1200px;
+  width: 80%;
   margin: 40px 0px 20px;
   background-color: rgb(155, 186, 245);
   border-radius: 20px;
