--- a/src/components/SearchParameters/SearchParameters.css
+++ b/src/components/SearchParameters/SearchParameters.css
@@ -2,8 +2,9 @@
   margin: 60px 0px;
   background-color: rgb(155, 186, 245);
   border-radius: 20px;
-  width: 1200px;
-  padding: 5px 20px 10px;
+  width: 80%;
+  padding-top: 5px;
+  padding-bottom: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
